# tf-keras-speech-commands

./: README.md  eval.py  listen.py  requirements.txt  train.py
classifier/: data.py  loss.py  model.py  params.py
classifier/models/: cnn.py  rnn.py
common/: bark_feature.py  data_utils.py  model_utils.py  utils.py
configs/: direction_classes.txt  params.json  speech_commands_classes.txt  speech_commands_optimize_classes.txt
inference/: README.md
inference/MNN/: CMakeLists.txt  mfcc.h  speech_commands.cpp  speech_commands.h  speech_commands_alsa.cpp  speech_commands_stream.cpp  threshold_decoder.h
inference/tflite/: CMakeLists.txt  speech_commands.cpp  speech_commands.h  speech_commands_alsa.cpp  speech_commands_stream.cpp  threshold_decoder.h
tools/audio_process/: add_noise.py  annotation_update.py  audio_convert.py  audio_play.py  audio_record.py  audio_reverberation.py  audio_split.py  gpuRIR_reverberation.py  mfcc_feature.py  mp3_convert.sh  roborock_speech_command_split.py  silent_check.py  speech_duration_check.py  split_channel.py  vad_clip.py  wav_check.py  wav_filter.py  wav_merge.py  wav_play.py  white_noise.py
tools/dataset/aishell/: dataset_prepare.sh
tools/dataset/libri_speech/: dataset_prepare.sh
tools/dataset/pdsounds/: dataset_prepare.sh
tools/dataset/speech_commands/: dataset_prepare.sh
tools/evaluation/: model_statistics.py  validate_speech_commands.py
tools/misc/: dump_inference_model.py  plot_audio.py  plot_spectrogram.py
tools/model_converter/: keras_to_onnx.py  keras_to_tensorflow.py
